[package]
name = "symservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debugid = "0.7.3"
symbolic = "8.6.0"
walkdir = "2.3.2"
uuid = "0.8"
serde_json = "1.0.59"
serde = "1.0.0"
tokio-postgres = "0.7.5"
anyhow = "1.0"
poem = "1.2.59"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.2.24"
